'No suites' screen height fixes to not overlap with supplier tab hover

--- a/client/src/app/components/client/test-suite/test-suite.component.scss
+++ b/client/src/app/components/client/test-suite/test-suite.component.scss
@@ -44,7 +44,7 @@ h5 {
   justify-content: center;
   align-items: center;
   z-index: 100;
-  top: 0;
+  top: 5px;
   right: 0;
   left: 0;
   bottom: 0;
